--- a/OS/1 lab/First_lab_OS.tex
+++ b/OS/1 lab/First_lab_OS.tex
@@ -198,19 +198,22 @@
     \begin{figure}[h!]
         \begin{minipage}[h]{1\linewidth}
             \centering
+            \includegraphics[width=0.8\linewidth]{Prt sc/Figure_9_2.png}  
+        \end{minipage}
+    \end{figure} \\ 
+    У Linux команда ping є загальною утилітою, яка використовується для перевірки 
+    наявності будь-якої мережі та чи доступний хост. Тому виклик команди без параметрів
+    призводить до помилки. Треба вказати аргумент запиту. 
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
             \includegraphics[width=0.8\linewidth]{Prt sc/Figure_9.png}  
         \end{minipage}
     \end{figure} \\
-    У Linux команда ping є загальною утилітою, яка використовується для перевірки 
-    наявності будь-якої мережі та чи доступний хост. За допомогою цієї команди ми 
-    можемо перевірити, чи працює сервер і чи він виконується. Крім того, це допомагає визначити
-    затримку <<latency>>.
+    За допомогою цієї команди ми можемо перевірити, чи працює сервер і чи він виконується. 
+    Крім того, це допомагає визначити затримку <<latency>>.
     Для перевірки інтерфейсу локальної мережі ми можемо використовувати будь-який з наступних способів:
-    \begin{enumerate}
-        \item ping 0
-        \item ping localhost
-        \item ping 127.0.0.1
-    \end{enumerate}
+    ping 0; ping localhost; ping 127.0.0.1
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{10}}
