--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -97,7 +97,7 @@
 \newpage
     \begin{enumerate}
     \item[14.] Поверніть собі права читати, писати, та переглядати вміст каталогів.
-    \item[15.] Створіть у каталозі \textbf{lab\_2} каталог \textbf{acl\_test} та у ньому файли \textbf{file1}, \textbf{file2}. Після час створення \textbf{file1} додайте у 
+    \item[15.] Створіть у каталозі \textbf{lab\_2} каталог \textbf{acl\_test} та у ньому файли \textbf{file1}, \textbf{file2}. Після створення \textbf{file1} додайте у 
     нього довільний текст.
     \item[16.] Виведіть ACL для \textbf{file1}.
     \item[17.] Змінить права доступу на \textbf{file1} так, щоб тільки власник мав право на читання.
@@ -156,4 +156,143 @@
         \end{minipage}
     \end{figure}
 
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{5}}
+    \end{center}
+    Змініть права доступу до файлу \textbf{my\_cat} так, щоб власник міг тільки читати цей файл.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_5.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{6}}
+    \end{center}
+    Переконайтеся в тому, що ви зробили ці зміни і повторіть п.3.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_6.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{7}}
+    \end{center}
+    Визначте права на файл \textbf{my\_cat} таким чином, щоб ви могли робити з файлом усе, що завгодно, а всі інші — нічого не могли робити.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_7.png}  
+        \end{minipage}
+    \end{figure}
+
+\newpage
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{8}}
+    \end{center}
+    Поверніться в домашній каталог. Змініть права доступу до каталогу \textbf{lab\_2} так, щоб ви могли його тільки читати.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_8.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{9}}
+    \end{center}
+    Спробуйте переглянути простий список файлів у цьому каталозі. Спробуйте переглянути список файлів з повною інформацією про них. Спробуйте запустити і видалити
+    файл \textbf{my\_cat} з цього каталогу.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_9.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{10}}
+    \end{center}
+    Поясніть отримані результати. Результати виконання п.8 можуть бути різними в різних версіях UNIX, зокрема, Linux і FreeBSD. Прокоментуйте отримані результати у
+    висновках. \\
+    Оскільки ми встановили права доступу для власника тільки на читання. Ми можемо переглядати(читати) вміст каталогу. 
+    Відповідно до логіки роботи ми не можемо виконувати запис та виконня для всього дерева цієї директорії.
+    
+\newpage
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{11}}
+    \end{center}
+    За допомогою команди \textbf{su <user name>}, завантажтесь в систему, користуючись обліковим записом іншого користувача. (Вам потрібно знати пароль цього
+    користувача.) Спробуйте отримати доступ до Вашого каталогу \textbf{lab\_2}. Перевірте, чи правильно зроблено завдання попереднього пункту. Створіть каталог \textbf{lab\_2\_2}.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_11.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{12}}
+    \end{center}
+    Знову завантажтесь в систему, користуючись своїм обліковим записом. Спробуйте зробити власником каталогу \textbf{lab\_2} іншого користувача. Спробуйте зробити 
+    себе власником каталогу \textbf{lab\_2\_2}. Поясніть результати.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
+        \end{minipage}
+    \end{figure} \\
+    Основна модель безпеки в Unix стосується користувачів і груп, а також їх права власності на різні файли та каталоги. Це означає, що без 
+    підвищених привілеїв (стати root або виконувати команди через sudo) жоден звичайний користувач не матиме достатніх привілеїв, щоб діяти від імені іншого користувача.
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{13}}
+    \end{center}
+    Зайдіть у каталог \textbf{lab\_2}. Зробіть так, щоб нові створені файли і каталоги діставали права доступу згідно Таблиці. Створіть новий файл і каталог і переконайтеся в
+    правильності ваших установок. Права для файлів \textbf{<<644>>}. Права для каталогів \textbf{<<745>>}.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_13.png}  
+        \end{minipage}
+    \end{figure}
+
+\newpage
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{14}}
+    \end{center}
+    Поверніть собі права читати, писати, та переглядати вміст каталогів.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_14.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{15}}
+    \end{center}
+    Створіть у каталозі \textbf{lab\_2} каталог \textbf{acl\_test} та у ньому файли \textbf{file1}, \textbf{file2}. Після створення \textbf{file1} додайте у 
+    нього довільний текст.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_15.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{16}}
+    \end{center}
+    Виведіть ACL для \textbf{file1}.
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=0.6\linewidth]{Prt sc/Figure_16.png}  
+        \end{minipage}
+    \end{figure}
+    
 \end{document}
