--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -245,8 +245,8 @@
             \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
         \end{minipage}
     \end{figure} \\
-    Основна модель безпеки в Unix стосується користувачів і груп, а також їх права власності на різні файли та каталоги. Це означає, що без 
-    підвищених привілеїв (стати root або виконувати команди через sudo) жоден звичайний користувач не матиме достатніх привілеїв, щоб діяти від імені іншого користувача.
+    Команду <<chown>> можна використовувати лише від імені супер-юзера. Тобто потрібно виконувати команду від імені <<sudo>>.\\
+    Приклад вірної команди: <<sudo chown test lab\_2>>.
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{13}}
