--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -245,8 +245,10 @@
             \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
         \end{minipage}
     \end{figure} \\
-    Команду <<chown>> можна використовувати лише від імені супер-юзера. Тобто потрібно виконувати команду від імені <<sudo>>.\\
-    Приклад вірної команди: <<sudo chown test lab\_2>>.
+    Змінити власника директорій не вдалось з таких причин: \\
+    - Файл має незмінний набір атрибутів (immutable attribute set).  Незмінний атрибут файлу не дозволяє користувачам нічого змінювати у файлі. \\
+    - Користувач Linux не може змінити право власності на файл, навіть якщо він є власником файлу.  
+    Лише користувач root може змінити власника файлу, або ви повинні мати привілеї sudo як звичайний користувач. 
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{13}}
