--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -245,10 +245,7 @@
             \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
         \end{minipage}
     \end{figure} \\
-    Змінити власника директорій не вдалось з таких причин: \\
-    - Файл має незмінний набір атрибутів (immutable attribute set).  Незмінний атрибут файлу не дозволяє користувачам нічого змінювати у файлі. \\
-    - Користувач Linux не може змінити право власності на файл, навіть якщо він є власником файлу.  
-    Лише користувач root може змінити власника файлу, або ви повинні мати привілеї sudo як звичайний користувач. 
+    За замовчуванням, змінити власника файлу може лише супер користувач. Відповідно до того, як лише член групи може змінити груповий ідентифікатор групи. 
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{13}}
