--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -245,7 +245,12 @@
             \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
         \end{minipage}
     \end{figure} \\
-    За замовчуванням, змінити власника файлу може лише супер користувач. Відповідно до того, як лише член групи може змінити груповий ідентифікатор групи. 
+    - Юзер не може передати права власності на файл іншому юзеру без використання sudo, щоб запобігти несанкціонованому доступу та передачі зі сторони
+    користувачів які користуються однім комп'ютером. Тобто з огляду безпеки це запобіжник передачі ваших файлів, без вашого відома.\\
+    - Каталог містить файли або підкаталоги, які вам не належать. Якщо в каталозі є файли або підкаталоги, які належать іншому користувачу або групі, 
+    то ви не зможете змінити власника каталогу, оскільки ви не маєте прав на зміну власника цих файлів або підкаталогів. \\
+    - Каталог містить посилання на інші файли або каталоги, то зміна власника цього каталогу 
+    може вплинути на права доступу до цих файлів і каталогів, що може мати наслідки. 
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{13}}
