--- a/OS/4 lab/Fourth_lab_OS.tex
+++ b/OS/4 lab/Fourth_lab_OS.tex
@@ -114,6 +114,36 @@
     \textbf{Налаштувати періодичний запуск сценарію за допомогою cron по понеділках о 9-й годині ранку.} \\
     \begin{minipage}[h]{1\linewidth}
         \centering
-        \includegraphics[width=0.9\linewidth]{Prt sc/Figure_4.png}  
+        \includegraphics[width=0.7\linewidth]{Prt sc/Figure_4.png}  
     \end{minipage}
+    \begin{minipage}[h]{1\linewidth}
+        \centering
+        \includegraphics[width=0.9\linewidth]{Prt sc/Figure_5.png}  
+    \end{minipage}
+    Маємо повідомлення на пошті. При налаштуванні mailutils було створено відповідний файл конфігурації, в якому вказані дані доступу до акаунту, з якого надходить лист.
+
+\newpage
+    \begin{center}
+        \Large{Висновки}
+    \end{center}
+    Скрипти є потужним інструментом у Linux, який дозволяє автоматизувати багато задач та процесів. Завдяки чому можна економити час для виконання повторюваних операцій.
+    Основні переваги використання скриптів у Linux:
+    \begin{itemize}
+        \item Дозволяють автоматизувати процеси та виконувати повторювані задачі без необхідності ручного введення команд.
+        \item Можна створити без необхідності вивчення складних програмних мов.
+        \item Дозволяють створювати складні процеси з умовними операторами, циклами, функціями, тощо.
+    \end{itemize}
+    Однак, використання скриптів має свої недоліки:
+    \begin{itemize}
+        \item Недостатня безпека: при використанні скриптів можуть виникати потенційні проблеми з безпекою, особливо якщо скрипти містять паролі або іншу конфіденційну інформацію.
+        \item Специфічність для платформи: скрипти можуть бути написані залежно від специфічних функцій та команд, які можуть відрізнятися від однієї платформи до іншої.
+        \item Необхідно знати команди та синтаксис командної оболонки.
+    \end{itemize}
+
+    Використання скриптів у Linux може значно зекономити час та зусилля, які потрібні для виконання повторюваних задач. Проте, маємо і певні незручності.
+
+    Налаштування mailutils для кожного дистрибутиву Linux різне. В деяких потрібні створювати відповідні файли конфігурації. В свою чергу на інших дистрибутивах
+    потрібні завантажувати та налаштовувати все це окремо. Тобто потрібні шукати відповідну документацію окремо. Також окремого налаштування потребує і сама система.
+    Що для нового юзера складе чи малу проблему при використанні.
+    
 \end{document}
