--- a/OS/2 lab/Second_lab_OS.tex
+++ b/OS/2 lab/Second_lab_OS.tex
@@ -244,13 +244,11 @@
             \centering
             \includegraphics[width=0.6\linewidth]{Prt sc/Figure_12.png}  
         \end{minipage}
-    \end{figure} \\
-    - Юзер не може передати права власності на файл іншому юзеру без використання sudo, щоб запобігти несанкціонованому доступу та передачі зі сторони
-    користувачів які користуються однім комп'ютером. Тобто з огляду безпеки це запобіжник передачі ваших файлів, без вашого відома.\\
-    - Каталог містить файли або підкаталоги, які вам не належать. Якщо в каталозі є файли або підкаталоги, які належать іншому користувачу або групі, 
-    то ви не зможете змінити власника каталогу, оскільки ви не маєте прав на зміну власника цих файлів або підкаталогів. \\
-    - Каталог містить посилання на інші файли або каталоги, то зміна власника цього каталогу 
-    може вплинути на права доступу до цих файлів і каталогів, що може мати наслідки. 
+    \end{figure} 
+
+    Отримали помилку. Тобто, за умови коли будь-який користувач зможе змінювати власника файлу - права доступу втратять сенс. 
+    Будь-хто зможе отримати доступ до будь якого файлу в системі. З цього випливає і те, що в такий самий спосід можна було б передавати 
+    будь-які файли іншим людям тим самим, наприклад, розповсюджувати шкідливі файли. Знайти першого власника не вийде, адже Linux не зберігає історію власництва на файл.
 
     \begin{center}
         \Large{Task \RomanNumeralCaps{13}}
